[package]
name = "space_hacker_club"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
dotenvy = "0.15.7"
futures = "0.3.28"
http = "0.2.9"
reqwest = { version = "0.11.17", features = ["json", "blocking"] }
serde = { version = "1.0.162", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full"] }
